[Fix #115166123] Centralize the details below image on the view details pageon smaller screen

--- a/troupon/static/css/base_styles.css
+++ b/troupon/static/css/base_styles.css
@@ -1615,7 +1615,7 @@ main > section.row > [class*='col-'] {
 
 @media (max-width: 768px) {
   .deals-specs {
-    padding: 0 10% 0 10%;
+    padding: 0 10%;
   }
 }
 
